examples/test/testpolicy15251.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15251
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key48: value16
      key12: value41
      key5: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value10
      podSelector:
        matchLabels:
          key3: value3
          key13: value38
